--- a/src/components/hero-swiper/hero-swiper.scss
+++ b/src/components/hero-swiper/hero-swiper.scss
@@ -7,9 +7,9 @@
     position: relative;
     min-height: calc(100vh);
 
-    * {
-        word-break: break-all;
-    }
+    // * {
+    //     word-break: break-all;
+    // }
 
     .ss {
         display: flex;
