--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,10 @@ html {
   --second-color: #6e6e6e;
 }
 
+#qaq {
+  display: none;
+}
+
 @media screen and (max-width: 500px) {
  
   body {
@@ -37,7 +41,7 @@ html {
   
   }
 
-  h1 {
+  #qaq {
     color: #000;
     font-size: 40px;
     text-align: center;
