--- a/src/components/offers/Offers.scss
+++ b/src/components/offers/Offers.scss
@@ -1,3 +1,15 @@
+.asz {
+    margin: unset !important;
+}
+
+.sze {
+    margin-top: unset !important;
+}
+
+.hidden {
+    display: none !important;
+}
+
 #topOffers {
     max-width: 1366px;
     margin: 0 auto;
