--- a/src/pages/admin-news-categories/admin-news-categories.scss
+++ b/src/pages/admin-news-categories/admin-news-categories.scss
@@ -1,4 +1,4 @@
-#admin-users-jobs {
+#admin-news-categories {
     background-color: #f5f5f5;
     min-height: 100vh;
 
@@ -139,6 +139,30 @@
                                 position: relative;
                                 width: 100%;
 
+                                svg {
+                                    width: 20px;
+                                    height: 20px;
+                                }
+
+                                #file-label {
+                                    position: relative;
+                                    background-color: #F8F8F8;
+                                    border: 1px solid #F2F2F2;
+                                    outline: none;
+                                    font-size: 16px;
+                                    padding: 5px 10px 5px 35px;
+                                    height: 45px;
+                                    width: 100%;
+                                    border-radius: 7px;
+                                    display: flex;
+                                    align-items: center;
+                                    cursor: pointer;
+                                }
+        
+                                input[type="file"] {
+                                    display: none !important;
+                                }
+
                                 input {
                                     background-color: #F8F8F8;
                                     border: 1px solid #F2F2F2;
@@ -264,6 +288,52 @@
             td {
                 border-bottom: 1px solid #ddd;
                 color: #5A5A5A;
+
+                #profImg {
+                    width: 50px;
+                    height: 50px;
+                    border-radius: 8px;
+                }
+
+                .check-inp {
+                    display: none;
+                
+                    &:checked ~ .checkbox {
+                        background-color: #41A58D;
+
+
+                    span {
+                        left: unset;
+                        right: 0;
+                        background-color: #fff;
+                    }
+                }}
+                .checkbox {
+                    width: 48px;
+                    height: 25px;
+                    background-color: rgb(231, 244, 241) ;
+                    border-radius: 20px;
+                    display: block;
+                    position: relative;
+                    padding: 2px;
+                    cursor: pointer;
+
+                    span {
+                        display: block;
+                        width: 25px;
+                        height: 95%;
+                        border-radius: 50%;
+                        background-color: #fff;
+                        position: absolute;
+                        left: 1px;
+                        top: 1px;
+                        transition: all 0.3s;
+
+                        &.active {
+                            left: 49%;
+                        }
+                    }
+                }
             }
 
             input[type="checkbox"] {
