--- a/src/pages/admin-sub-categories/adminSubcategories.scss
+++ b/src/pages/admin-sub-categories/adminSubcategories.scss
@@ -1,4 +1,4 @@
-#admin-users-jobs {
+#admin-sub-categories {
     background-color: #f5f5f5;
     min-height: 100vh;
 
@@ -97,7 +97,7 @@
                     }
 
                     .offcanvas {
-                        height: 100%;
+                        height: 100vh;
                         width: 400px;
                         background-color: #fff;
                         top: 0;
@@ -106,6 +106,7 @@
                         border-radius: 10px 0 0 10px;
                         z-index: 1;
                         padding: 20px;
+                        overflow-y: scroll;
 
                         &.show {
                             right: 0 !important;
@@ -138,6 +139,30 @@
                             .inputs {
                                 position: relative;
                                 width: 100%;
+
+                                svg {
+                                    width: 20px;
+                                    height: 20px;
+                                }
+
+                                #file-label {
+                                    position: relative;
+                                    background-color: #F8F8F8;
+                                    border: 1px solid #F2F2F2;
+                                    outline: none;
+                                    font-size: 16px;
+                                    padding: 5px 10px 5px 35px;
+                                    height: 45px;
+                                    width: 100%;
+                                    border-radius: 7px;
+                                    display: flex;
+                                    align-items: center;
+                                    cursor: pointer;
+                                }
+        
+                                input[type="file"] {
+                                    display: none !important;
+                                }
 
                                 input {
                                     background-color: #F8F8F8;
@@ -264,6 +289,69 @@
             td {
                 border-bottom: 1px solid #ddd;
                 color: #5A5A5A;
+
+                a {
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    gap: 5px;
+                    background-color: #E7F4F1;
+                    border-radius: 20px;
+                    padding: 10px;
+                    color: #41A58D;
+                    border: 1px solid transparent;
+
+                    &:hover {
+                        border-color: #41A58D;
+                    }
+                }
+
+                #profImg {
+                    width: 50px;
+                    height: 50px;
+                    border-radius: 8px;
+                }
+
+                .check-inp {
+                    display: none;
+                    &:checked ~ .checkbox {
+                        background-color: #41A58D;
+                        border: unset;
+
+
+                    span {
+                        left: unset;
+                        right: 0;
+                        background-color: #fff;
+                    }
+                }}
+                .checkbox {
+                    border: 1px solid #41A58D;
+                    width: 48px;
+                    height: 25px;
+                    background-color: rgb(231, 244, 241) ;
+                    border-radius: 20px;
+                    display: block;
+                    position: relative;
+                    padding: 2px;
+                    cursor: pointer;
+
+                    span {
+                        display: block;
+                        width: 25px;
+                        height: 95%;
+                        border-radius: 50%;
+                        background-color: #fff;
+                        position: absolute;
+                        left: 1px;
+                        top: 1px;
+                        transition: all 0.3s;
+
+                        &.active {
+                            left: 49%;
+                        }
+                    }
+                }
             }
 
             input[type="checkbox"] {
