--- a/src/pages/adminNews/adminNews.scss
+++ b/src/pages/adminNews/adminNews.scss
@@ -1,4 +1,4 @@
-#admin-users-jobs {
+#admin-news {
     background-color: #f5f5f5;
     min-height: 100vh;
 
@@ -97,8 +97,9 @@
                     }
 
                     .offcanvas {
-                        height: 100%;
-                        width: 400px;
+                        width: 600px;
+                        height: 100vh;
+                        overflow-y: scroll;
                         background-color: #fff;
                         top: 0;
                         right: -100%;
@@ -121,6 +122,18 @@
                             display: flex;
                             flex-direction: column;
                             row-gap: 15px;
+
+                            textarea {
+                                padding: 10px;
+                                border-radius: 7px;
+                                background-color: #f5f5f5;
+                                font-size: 16px;
+                                outline: none;
+                                border: none;
+                                height: 150px;
+                                resize: none;
+                            }
+
                             .input-row {
                                 display: flex;
                                 flex-direction: column;
@@ -168,6 +181,16 @@
                                     transform: translateY(-50%);
                                     left: 8px;
                                     z-index: 99;
+                                }
+                            }
+
+                            .one-row {
+                                display: flex;
+                                gap: 10px;
+                                width: 100%;
+
+                                .input-row {
+                                    width: 100%;
                                 }
                             }
 
@@ -264,6 +287,74 @@
             td {
                 border-bottom: 1px solid #ddd;
                 color: #5A5A5A;
+
+                .productImg {
+                    width: 50px;
+                    height: 50px;
+                    border-radius: 15px;
+                }
+
+                .authorImg {
+                    width: 50px;
+                    height: 50px;
+                    border-radius: 50%;
+                }
+
+                .check-inp {
+                    display: none;
+
+                    &:checked~.checkbox {
+                        background-color: #41A58D;
+                        border: unset;
+
+
+                        span {
+                            left: unset;
+                            right: 0;
+                            background-color: #fff;
+                        }
+                    }
+                }
+
+                .checkbox {
+                    width: 48px;
+                    height: 25px;
+                    background-color: rgb(231, 244, 241);
+                    border-radius: 20px;
+                    display: block;
+                    position: relative;
+                    padding: 2px;
+                    cursor: pointer;
+                    border: 1px solid #41A58D;
+
+                    span {
+                        display: block;
+                        width: 25px;
+                        height: 95%;
+                        border-radius: 50%;
+                        background-color: #fff;
+                        position: absolute;
+                        left: 1px;
+                        top: 1px;
+                        transition: all 0.3s;
+
+                        &.active {
+                            left: 49%;
+                        }
+                    }
+                }
+
+                // &.sku {
+                //     width: 100px;
+                //     height: 40px;
+                //     display: -webkit-box !important;
+                //     -webkit-line-clamp: 2 !important;
+                //     -webkit-box-orient: vertical !important;
+                //     overflow: hidden !important;
+                //     text-overflow: ellipsis !important;
+                //     pointer-events: none !important;
+                //     word-break: break-all !important;
+                // }
             }
 
             input[type="checkbox"] {
