--- a/src/pages/courseDetail/courseDetail.scss
+++ b/src/pages/courseDetail/courseDetail.scss
@@ -178,6 +178,7 @@
         justify-content: space-between;
         max-width: 1366px;
         margin: 0 auto;
+        padding: 0 50px 50px;
         
         .leftt {
             border-radius: 10px;
@@ -307,7 +308,7 @@
             background-color: #fff;
             border-radius: 10px;
             padding: 20px;
-            width: 30%;
+            width: 29%;
 
             .title {
                 font-size: 22px;
