--- a/src/pages/productDetail/productDetails.scss
+++ b/src/pages/productDetail/productDetails.scss
@@ -1,4 +1,5 @@
 .product-details {
+    background-color: #fff;
     .to-back {
         background-color: #41A58D;
         height: 50px;
@@ -37,7 +38,7 @@
         justify-content: center;
 
         .images-container {
-            width: 50%;
+            width: 55%;
             display: flex;
             align-items: center;
             flex-direction: column;
@@ -52,8 +53,8 @@
                     row-gap: 10px;
 
                     img {
-                        width: 88px;
-                        height: 88px;
+                        width: 68px;
+                        height: 68px;
                         object-fit: cover;
                         cursor: pointer;
                         border-radius: 10px;
@@ -62,7 +63,7 @@
                 }
 
                 .hero-image {
-                    width: 380px;
+                    width: 430px;
                     height: 380px;
 
                     img {
@@ -73,6 +74,62 @@
                         object-fit: cover;
                         cursor: pointer;
                     }
+                }
+            }
+
+            
+        }
+
+        .texts {
+            width: 45%;
+
+            .title {
+                color: #1E1E1E;
+                font-size: 28px;
+                font-weight: 600;
+            }
+
+            p {
+                color: #5A5A5A;
+                margin-top: 25px;
+            }
+
+            .price {
+                margin-top: 5px;
+                display: flex;
+                align-items: center;
+                gap: 10px;
+
+                .oldPrice {
+                    font-size: 14px;
+                    color: #757575;
+                    text-decoration: line-through;
+
+                    &.active {
+                        text-decoration: none;
+                        color: #41A58D;
+                        font-size: 16px;
+                        font-weight: 600;
+                    }
+                }
+
+                .newPrice {
+                    color: #41A58D;
+                    font-weight: 600;
+                    display: none;
+
+                    &.active {
+                        display: unset;
+                    }
+                }
+
+                .chegirma {
+                    background-color: #14AE5C;
+                    padding: 3px 7px;
+                    border-radius: 5px;
+                    color: #fff;
+                    font-size: 13px;
+                    font-weight: 500;
                 }
             }
 
@@ -120,171 +177,7 @@
                     }
                 }
             }
-        }
 
-        .texts {
-            width: 50%;
-            
-            .title {
-                color: #1E1E1E;
-                font-size: 28px;
-                font-weight: 600;
-            }
-
-            .price {
-                margin-top: 5px;
-                display: flex;
-                align-items: center;
-                gap: 10px;
-
-                .oldPrice {
-                    font-size: 14px;
-                    color: #757575;
-                    text-decoration: line-through;
-                    
-                    &.active {
-                        text-decoration: none;
-                        color: #41A58D;
-                        font-size: 16px;
-                        font-weight: 600;
-                    }
-                }
-
-                .newPrice {
-                    color: #41A58D;
-                    font-weight: 600;
-                    display: none;
-
-                    &.active {
-                        display: unset;
-                    }
-                }
-
-                .chegirma {
-                    background-color: #14AE5C;
-                    padding: 3px 7px;
-                    border-radius: 5px;
-                    color: #fff;
-                    font-size: 13px;
-                    font-weight: 500;
-                }
-            }
-
-            .dep {
-                margin-top: 20px;
-                display: flex;
-                input {
-                    display: none;
-                }
-
-                label {
-                    text-align: center;
-                    padding: 10px 0 7px;
-                    font-size: 17px;
-                    color: #767676;
-                    font-weight: 600;
-                    cursor: pointer;
-                    position: relative;
-                    width: 50%;
-
-                    &::after {
-                        position: absolute;
-                        content: "";
-                        bottom: 0;
-                        left: 0;
-                        width: 100%;
-                        height: 2px;
-                        background-color: #767676;
-                    
-                    }
-                }
-
-                input:checked+label {
-                    color: #303030;
-
-                    &::after {
-                        background-color: #303030;
-                    }
-                }
-
-            }
-            .dep-container {
-
-                .title {
-                    font-size: 22px;
-                    font-weight: 600;
-                    padding: 30px 0 10px;
-                }
-
-                p:last-child {
-                    color: #303030;
-                }
-
-                &>div {
-                    display: none; // Hide all by default
-                }
-
-                &>div.active {
-                    display: block; // Show only the active one
-                }
-
-                .datas-container {
-                    .more-data {
-                        ul:first-child {
-                            li {
-                                min-height: 21px;
-                                display: flex;
-                                justify-content: space-between;
-                                align-items: flex-end;
-                                border-bottom: 1px solid #D9D9D9;
-                                gap: 20px;
-                                margin-top: 13px;
-                                position: relative;
-                            
-                                span:first-child {
-                                    color: #5A5A5A;
-                                    position: relative;
-                                    bottom: -4px;
-                                    background-color: #fff;
-                                    padding: 0 3px;
-                                    max-width: 40%;
-                                    height: 100%;
-                                    display: flex;
-                                    align-items: center;
-                                }
-                                
-                                span:last-child {
-                                    font-weight: 600;
-                                    position: relative;
-                                    bottom: -4px;
-                                    background-color: #fff;
-                                    right: 0;
-                                    padding: 0 3px;
-                                    max-width: 60%;
-                                    height: 100%;
-                                    display: flex;
-                                    align-items: center;
-                                }
-                            }
-                        }
-
-                        .xus {
-                            .title {
-                                font-size: 20px;
-                                font-weight: 600;
-                            }
-
-                            ul {
-                                padding-left: 17px;
-                                li {
-                                    list-style:disc;
-                                    margin-top: 10px;
-                                }
-                            }
-                        }
-                    }
-                }
-            }
         }
     }
 
@@ -330,7 +223,7 @@
                         border-radius: 10px;
                     }
                 }
-                
+
                 .productTitle {
                     margin-top: 5px;
                     color: #1E1E1E;
@@ -394,6 +287,163 @@
 
                     span {
                         color: #757575;
+                    }
+                }
+            }
+        }
+    }
+}
+
+.about-product-bottom {
+    padding: 30px 50px;
+    max-width: 1366px;
+    margin: 0 auto;
+    .dep {
+        width: 50%;
+        margin-top: 20px;
+        display: flex;
+        border-bottom: 1px solid #767676;
+
+        input {
+            display: none;
+        }
+
+        label {
+            display: flex;
+            align-items: center;
+            text-align: center;
+            padding: 10px 3px 7px;
+            font-size: 17px;
+            color: #5A5A5A;
+            font-weight: 600;
+            cursor: pointer;
+            position: relative;
+            margin-right: 10px;
+            gap: 5px;
+
+            svg {
+                path {
+                    stroke: #5A5A5A;
+                }
+            }
+
+            &::after {
+                position: absolute;
+                content: "";
+                bottom: -1px;
+                left: 0;
+                width: 100%;
+                height: 2px;
+                background-color: #767676;
+                display: none;
+            }
+        }
+
+        input:checked+label {
+            color: #41A58D;
+
+            svg {
+                path {
+                    stroke: #41A58D;
+                }
+            }
+
+            &::after {
+                display: block;
+                background-color: #41A58D;
+            }
+        }
+
+    }
+
+    .dep-container {
+        width: 50%;
+
+        .hashtags {
+            display: flex;
+            gap: 13px;
+            margin-top: 20px;
+            flex-wrap: wrap;
+
+            .hashtag {
+                padding: 8px 10px;
+                color: #41A58D;
+                background-color: #f5f5f5;
+                border-radius: 6px;
+            }
+        }
+
+        .title {
+            font-size: 22px;
+            font-weight: 600;
+            padding: 30px 0 10px;
+        }
+
+        p:last-child {
+            color: #303030;
+        }
+
+        &>div {
+            display: none; // Hide all by default
+        }
+
+        &>div.active {
+            display: block; // Show only the active one
+        }
+
+        .datas-container {
+            .more-data {
+                ul:first-child {
+                    li {
+                        min-height: 21px;
+                        display: flex;
+                        justify-content: space-between;
+                        align-items: flex-end;
+                        border-bottom: 1px solid #D9D9D9;
+                        gap: 20px;
+                        margin-top: 13px;
+                        position: relative;
+
+                        span:first-child {
+                            color: #5A5A5A;
+                            position: relative;
+                            bottom: -4px;
+                            background-color: #fff;
+                            padding: 0 3px;
+                            max-width: 40%;
+                            height: 100%;
+                            display: flex;
+                            align-items: center;
+                        }
+
+                        span:last-child {
+                            font-weight: 600;
+                            position: relative;
+                            bottom: -4px;
+                            background-color: #fff;
+                            right: 0;
+                            padding: 0 3px;
+                            max-width: 60%;
+                            height: 100%;
+                            display: flex;
+                            align-items: center;
+                        }
+                    }
+                }
+
+                .xus {
+                    .title {
+                        font-size: 20px;
+                        font-weight: 600;
+                    }
+
+                    ul {
+                        padding-left: 17px;
+
+                        li {
+                            list-style: disc;
+                            margin-top: 10px;
+                        }
                     }
                 }
             }
