--- a/src/pages/addAnnounce/addAnnounce.scss
+++ b/src/pages/addAnnounce/addAnnounce.scss
@@ -1,5 +1,5 @@
 #addAnnounce {
-    padding-top: 150px ;
+    padding-top: 150px;
 
     .announceSelect {
         background-color: #fff;
@@ -94,8 +94,181 @@
 
     .announce-from-container {
         padding: 30px 50px;
-        max-width: 1366px;
-        margin: 0 auto;
+        max-width: 1250px;
+        margin: 30px auto 30px;
+        background-color: #fff;
+        border-radius: 10px;
+
+        .big-title {
+            font-size: 24px;
+            font-weight: 600;
+        }
+
+        p {
+            margin-top: 15px;
+            font-size: 17px;
+            font-weight: 600;
+        }
+
+        .input-col {
+            width: 50%;
+            position: relative;
+            margin-top: 10px;
+
+            &.w-100 {
+                width: 100%;
+            }
+
+            label {
+                color: #767676;
+            }
+
+            .input-icon {
+                position: relative;
+                margin-top: 5px;
+
+                svg {
+                    position: absolute;
+                    left: 11px;
+                    top: 50%;
+                    transform: translateY(-50%);
+                    width: 24px;
+                    height: 24px;
+                }
+
+                input,
+                select {
+                    width: 100%;
+                    height: 45px;
+                    border: 1px solid #F2F2F2;
+                    background-color: transparent;
+                    font-size: 16px;
+                    padding: 7px 10px 7px 39px;
+                    border-radius: 5px;
+                    outline: none;
+                    color: #303030;
+
+
+                    &.input-p-0 {
+                        padding-left: 10px;
+                        background-color: #F8F8F8;
+                    }
+                }
+            }
+
+            .inputs {
+                display: flex;
+                align-items: center;
+                gap: 10px;
+
+                input {
+                    background-color: #F8F8F8;
+                }
+
+                .checker {
+                    display: flex;
+                    align-items: center;
+                    gap: 10px;
+
+                    input {
+                        display: none;
+
+                        &:checked~.checkbox {
+                            background-color: #41A58D;
+                        }
+                    }
+
+                    .checkbox {
+                        width: 48px;
+                        height: 26px;
+                        background-color: rgb(231, 244, 241);
+                        border-radius: 20px;
+                        display: block;
+                        position: relative;
+                        padding: 2px;
+                        cursor: pointer;
+                        transition: all 0.5s;
+
+                        span {
+                            display: block;
+                            width: 23px;
+                            height: 89%;
+                            border-radius: 50%;
+                            background-color: #fff;
+                            position: absolute;
+                            left: 1px;
+                            top: 50%;
+                            transform: translateY(-50%);
+                            transition: all 0.5s;
+
+                            &.active {
+                                left: 48.5%;
+                            }
+                        }
+                    }
+                }
+            }
+
+            .input-icons {
+                display: flex;
+                gap: 10px;
+                button {
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    gap: 7px;
+                }
+
+                button[type="submit"] {
+                    width: 200px;
+                    height: 45px;
+                    background-color: #41A58D;
+                    color: #fff;
+                    border-radius: 7px;
+                    font-size: 16px;
+                    cursor: pointer;
+                    border: none;
+                }
+                
+                button[type="button"] {
+                    width: 180px;
+                    height: 45px;
+                    background-color: transparent;
+                    color: #fff;
+                    border-radius: 7px;
+                    font-size: 16px;
+                    cursor: pointer;
+                    border: none;
+                    border: 1px solid #41A58D;
+                    color: #41A58D;
+                }
+
+                #canc {
+                    width: 180px;
+                    height: 45px;
+                    background-color: transparent;
+                    color: #fff;
+                    border-radius: 7px;
+                    font-size: 16px;
+                    cursor: pointer;
+                    border: none;
+                    border: 1px solid transparent;
+                    color: #41A58D;
+                }
+            }
+        }
+
+        .address, .timm {
+            display: flex;
+            gap: 20px;
+
+            .input-icon {
+
+                select {
+                    background-color: #F8F8F8;
+                }
+            }
+        }
     }
 }
 
@@ -117,5 +290,5 @@
         height: 2px !important;
         background-color: #41A58D !important;
         // display: block;
-    }    
+    }
 }
