--- a/src/components/addComments/addComments.scss
+++ b/src/components/addComments/addComments.scss
@@ -1,9 +1,18 @@
+.news-comment {
+    padding: 20px 30px !important;
+}
+
 #comments {
     background-color: #fff;
     width: 100%;
-    padding: 20px 30px;
+    padding: 20px 0;
     border-radius: 10px;
     color: #1E1E1E;
+
+    & * {
+        list-style: unset;
+        text-decoration: unset;
+    }
 
     .commentsInner {
         margin-top: 20px;
@@ -96,6 +105,16 @@
                 color: #757575;
                 // margin-top: 10px;
                 padding: 15px 0;
+
+                ul, ol {
+                    padding-left: 30px;
+
+                    list-style: decimal;
+                }
+
+                s {
+                    text-decoration: line-through;
+                }
             }
 
             .replied-messages {
@@ -161,21 +180,11 @@
             margin-top: 20px;
 
             .type {
-                border-radius: 6px;
-                background-color: #F8F8F8;
-                border: 1px solid #F2F2F2;
-                padding: 20px;
+                // border-radius: 6px;
+                // background-color: #F8F8F8;
+                // border: 1px solid #F2F2F2;
+                // padding: 20px;
 
-                .btns {
-                    display: flex;
-                    gap: 15px;
-
-                    button {
-                        background-color: transparent;
-                        border: none;
-                        cursor: pointer;
-                    }
-                }
 
                 textarea {
                     width: 100%;
@@ -244,4 +253,95 @@
         border-color: red;
         background-color: #fff;
     }
+}
+
+.tox {
+    height: 250px !important;
+    .tox-menubar {
+        display: none !important;
+    }
+
+    .tox-statusbar {
+        display: none !important;
+    }
+
+    .tox-edit-area__iframe {
+        background-color: #F8F8F8 !important;
+        border: 1px solid #f2f2f2 !important;
+        outline: unset !important;
+        border: unset !important;
+        font-size: 20px !important;
+    }
+
+    &:not(.tox-tinymce-inline) .tox-editor-header {
+        box-shadow: unset !important;
+        padding: unset !important;
+    }
+
+    .tox-toolbar__primary {
+        border: unset !important;
+    }
+}
+
+.tox .tox-toolbar-overlord {
+    background-color: #f8f8f8 !important;
+}
+
+.tox .tox-toolbar,
+.tox .tox-toolbar__overflow,
+.tox .tox-toolbar__primary {
+    background-color: #F8F8F8 !important;
+    background-image: unset !important;
+}
+
+.tox .tox-tbtn {
+    background: #f8f8f8 !important;
+    height: 40px !important;
+    width: 40px !important;
+    cursor: pointer;
+    transition: all 0.5s !important;
+
+    svg {
+    transition: all 0.5s !important;
+
+    }
+
+    &:hover {
+        background-color: #41A58D !important;
+
+        span {
+
+            svg {
+                fill: #fff;
+            }
+        }
+    }
+
+    &.tox-tbtn--enabled {
+        background-color: #41A58D !important;
+        color: #fff !important;
+        
+        span {
+
+            svg {
+                fill: #fff;
+            }
+        }
+    }
+}
+
+.tox.tox-edit-focus .tox-edit-area::before {
+    opacity: 0 !important;
+}
+
+.mce-content-body {
+    margin: 0 !important;
+
+    p {
+        margin: 0 !important;
+    }
+}
+
+.tox-notifications-container {
+    display: none !important;
 }
