--- a/src/pages/productCategories/Categories.scss
+++ b/src/pages/productCategories/Categories.scss
@@ -1,5 +1,4 @@
 .products-category {
-    // padding: 0 30px 30px;
     .to-back {
         background-color: #41A58D;
         height: 50px;
@@ -28,7 +27,6 @@
             }
         }
     }
-
     .title {
         max-width: 1366px;
         margin: 0 auto;
@@ -50,10 +48,6 @@
             overflow: hidden;
             border-radius: 10px;
 
-            // &:hover {
-            //     box-shadow: 0 0 20px #00000038;
-            // }
-
             .imgContainer {
                 width: 100%;
                 height: 300px;
@@ -65,19 +59,33 @@
                     border-radius: 10px;
                 }
             }
-            
+
             .productTitle {
                 margin-top: 5px;
                 color: #1E1E1E;
                 font-weight: 600;
                 font-size: 17px;
                 margin-top: 10px;
+                display: -webkit-box;
+                -webkit-box-orient: vertical;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                line-clamp: 2;
+                -webkit-line-clamp: 2;
+                word-wrap: break-word;
             }
 
             .productDescription {
                 margin-top: 5px;
                 color: #757575;
                 font-size: 15px;
+                display: -webkit-box;
+                -webkit-box-orient: vertical;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                line-clamp: 2;
+                -webkit-line-clamp: 2;
+                word-wrap: break-word;
             }
 
             .price {
@@ -129,6 +137,49 @@
 
                 span {
                     color: #757575;
+                }
+            }
+        }
+    }
+}
+
+
+@media screen and (max-width: 500px) {
+    .products-category {
+        padding: 10px 0 30px;
+
+        .to-back {
+            margin-top: 80px;
+
+            .inner {
+                padding: 0 20px;
+            }
+        }
+
+        .title {
+            font-size: 18px;
+            padding: 20px;
+        }
+
+        .littleTitle {
+            font-size: 17px;
+        }
+
+        .productsInner {
+            padding: 20px;
+            .category-product-link {
+                width: 47%;
+
+                .product {
+                    width: 100%;
+
+                    .imgContainer {
+                        height: 200px;
+                    }
+
+                    .price {
+                        flex-direction: column;
+                    }
                 }
             }
         }
