--- a/src/components/addComments/addComments.scss
+++ b/src/components/addComments/addComments.scss
@@ -180,20 +180,16 @@
             margin-top: 20px;
 
             .type {
-                // border-radius: 6px;
-                // background-color: #F8F8F8;
-                // border: 1px solid #F2F2F2;
-                // padding: 20px;
-
 
                 textarea {
                     width: 100%;
                     height: 200px;
-                    border-radius: 5px;
-                    background-color: transparent;
+                    border-radius: 8px;
+                    background-color: #F8F8F8 !important;
+                    border: 2px solid #f2f2f2 !important;
                     resize: none;
                     border: none;
-                    padding: 10px 0;
+                    padding: 10px;
                     outline: none;
                     font-size: 16px;
                 }
@@ -344,4 +340,35 @@
 
 .tox-notifications-container {
     display: none !important;
+}
+
+@media screen and (max-width: 500px) {
+    .news-comment {
+        padding: 20px 0 !important;
+        
+    }
+    .course-comments-desktop-version {
+        display: none;
+    }
+
+    .reply-button {
+        button {
+            font-size: 13px !important;
+            padding: 7px 8px !important;
+        }
+    }
+
+    .user {
+        .texts {
+            .name {
+                font-size: 15px;
+            }
+
+            .date {
+                span {
+                    font-size: 14px;
+                }
+            }
+        }
+    }
 }
