--- a/src/components/searchBar/searchbar.scss
+++ b/src/components/searchBar/searchbar.scss
@@ -28,3 +28,33 @@
         }
     }
 }
+
+@media screen and (max-width: 500px) {
+    .search-bar-container {
+        background-color: #fff;
+        padding: 10px 0;
+        display: flex;
+        justify-content: center;
+        #search-bar {
+            width: 70%;
+    
+            form {
+                input {
+                    width: 100%;
+                    border-radius: 20px 0 0 20px;
+                }
+    
+                button {
+                    background-color: #F2F2F2;
+                    border-radius: 0 20px 20px 0;
+                    width: 49px;
+                    svg {
+                        path {
+                            stroke: #41A58D;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
