--- a/src/pages/addAnnounce/addAnnounce.scss
+++ b/src/pages/addAnnounce/addAnnounce.scss
@@ -92,7 +92,7 @@
         }
     }
 
-    .announce-from-container {
+    .announce-form-container {
         padding: 30px 50px;
         max-width: 1250px;
         margin: 30px auto 30px;
@@ -212,6 +212,7 @@
             .input-icons {
                 display: flex;
                 gap: 10px;
+
                 button {
                     display: flex;
                     align-items: center;
@@ -229,7 +230,7 @@
                     cursor: pointer;
                     border: none;
                 }
-                
+
                 button[type="button"] {
                     width: 180px;
                     height: 45px;
@@ -258,7 +259,8 @@
             }
         }
 
-        .address, .timm {
+        .address,
+        .timm {
             display: flex;
             gap: 20px;
 
@@ -291,4 +293,151 @@
         background-color: #41A58D !important;
         // display: block;
     }
+}
+
+.add-announce-mobile-version {
+    display: none;
+}
+
+@media screen and (max-width: 500px) {
+    #addAnnounce {
+        padding-top: 0;
+        margin-top: 85px;
+
+        .to-back {
+            background-color: #41A58D;
+            height: 50px;
+
+            .backInner {
+                margin: 0 auto;
+                max-width: 1366px;
+                align-items: center;
+                display: flex;
+                height: 100%;
+                padding: 0 20px;
+                color: #fff;
+
+                span {
+                    display: flex;
+                    align-items: center;
+                    font-size: 15px;
+                }
+                
+                a {
+                    font-size: 15px;
+                    color: #fff;
+
+                    &:hover {
+                        text-decoration: underline;
+                    }
+                }
+            }
+
+        }
+
+        .search-container {
+            display: flex;
+            gap: 5px;
+            padding: 10px 20px;
+            background-color: #fff;
+            align-items: center;
+
+            a {
+                background-color: #41A58D;
+                color: #fff;
+                padding: 7px 7px;
+                border-radius: 7px;
+                font-size: 13px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                gap: 3px;
+
+                svg {
+                    path {
+                        stroke: #fff !important;
+                    }
+                }
+            }
+
+            #search-bar {
+                width: 64%;
+
+                form {
+                    input {
+                        width: 100%;
+                        font-size: 15px;
+                        border-radius: 20px 0 0 20px;
+                        height: 40px;
+                        padding-right: 0;
+                    }
+
+                    button {
+                        border-radius: 0 20px 20px 0;
+                        background-color: #f2f2f2;
+                        height: 40px;
+
+                        svg {
+                            path {
+                                stroke: #41A58D;
+                            }
+
+                            ;
+                        }
+                    }
+                }
+            }
+        }
+
+        .announce-form-container {
+            padding: 20px;
+            margin: 20px;
+
+            form {
+                .input-col {
+                    width: 100%;
+                    .inputs {
+                        flex-direction: column;
+                    }
+                    .input-icon {
+                        width: 100%;
+                        input, select {
+                            width: 100%;
+                        }
+                    }
+                }
+
+                .input-col {
+                    .input-icons {
+                        flex-direction: column;
+                        button {
+                            width: 100% !important;
+
+                            &#canc {
+                                color: red !important;
+
+                                svg {
+                                    path {
+                                        stroke: red;
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+
+                .address, .timm {
+                    flex-direction: column;
+                    gap: 5px;
+                }
+            }
+        }
+        
+        .announceSelect {
+            #addAnn-link {
+                display: none;
+            }
+        }
+    }
+
 }
