--- a/src/pages/coursesCategory/coursesCategory.scss
+++ b/src/pages/coursesCategory/coursesCategory.scss
@@ -64,7 +64,6 @@
         max-width: 1366px;
         margin: 0 auto;
 
-
         .courses-cards {
             display: flex;
             flex-wrap: wrap;
@@ -157,4 +156,40 @@
             }
         }
     }
+}
+
+@media screen and (max-width: 500px) {
+    #courseCategory {
+        .to-back {
+            margin-top: 85px;           
+        
+            .backInner {
+                padding: 0 20px;
+            }
+        }       
+
+        .allProductsPoster {
+            .posterInner {
+                padding-left: 20px;
+                img {
+                    display: none;
+                }
+
+                h2 {
+                    font-size: 22px;
+                }
+            }
+        }
+
+        .courseInner {
+            padding: 20px;
+            .courses-cards {
+                justify-content: center;
+                padding: 0 15px;
+                .course-card {
+                    width: 100%;
+                }
+            }
+        }
+    }   
 }
