--- a/src/pages/newsCategory/newsCategory.scss
+++ b/src/pages/newsCategory/newsCategory.scss
@@ -1,6 +1,5 @@
 #newsCategory {
     background-color: #F5F5F5;
-
     .to-back {
         background-color: #41A58D;
         height: 50px;
@@ -169,5 +168,134 @@
 
     .weather-data {
         padding: 10px 0;
+    }
+}
+
+.news-search-bar {
+    display: none;
+}
+
+@media screen and (max-width: 500px) {
+    #newsCategory {
+        .to-back {
+            margin-top: 85px;
+            
+            .backInner {
+                padding: 0 20px;
+            }
+        }
+
+        .news-search-bar {
+            display: flex;
+            justify-content: center;
+            padding: 10px 0;
+            background-color: #fff;
+            gap: 5px;
+
+            #search-bar {
+                width: 70%;
+
+                form {
+                    input {
+                        width: 100%;
+                        border-radius: 20px 0 0 20px;
+                    }
+
+                    button {
+                        background-color: #F2F2F2;
+                        border-radius: 0 20px 20px 0;
+                        width: 49px;
+                        svg {
+                            path {
+                                stroke: #41A58D;
+                            }
+                        }
+                    }
+                }
+            }
+
+            .category-btn {
+                width: 44px;
+                height: 44px;
+                border-radius: 7px;
+                background-color: #41A58D;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                position: relative;
+                cursor: pointer;
+
+                .categories-mobile-version {
+                    position: absolute;
+                    top: 100%;
+                    margin-top: 10px;
+                    background-color: #fff;
+                    z-index: -2;
+                    opacity: 0;
+                    padding: 20px;
+                    border-radius: 7px;
+                    right: 0;
+                    box-shadow: 0 0 5px #00000085;
+                    width: 200px;
+
+                    &.active {
+                        z-index: 2;
+                        opacity: 1;
+                    }
+
+                    h2 {
+                        font-size: 20px;
+                        font-weight: 600;
+                        margin-bottom: 5px;
+                    }
+
+                    ul {
+                        li {
+                            padding: 6px 0;
+
+                            a {
+                                color: #757575;
+
+                                &:hover {
+                                    color: #000;
+                                }
+                            }
+                        }
+                    }
+                }
+
+            }
+        }
+        
+        .allProductsPoster {
+            .posterInner {
+                overflow: hidden;
+                margin: 0;
+                padding-left: 20px;
+                h2 {
+                    font-size: 18px;
+                    width: 80%;
+                }
+
+                img {
+                    display: none;
+                }
+            }
+        }
+
+        .newsInner {
+            flex-direction: column;
+            padding: 20px;
+
+            .news-documents {
+                width: 100%;
+
+                .news-cards {
+                    .news-card-link {
+                        width: 100%;
+                    }
+                }
+            }
+        }
     }
 }
