--- a/src/pages/newsPage/newsPage.scss
+++ b/src/pages/newsPage/newsPage.scss
@@ -1,5 +1,5 @@
 #newsDetail {
-    padding: 150px 0 30px;
+    padding: 140px 0 30px;
 
     .newsFirstPoster {
         height: 210px;
@@ -51,7 +51,6 @@
 
         .left-side {
             width: 65%;
-
             .img-container {
                 width: 100%;
                 height: 450px;
@@ -65,6 +64,7 @@
                     width: 100%;
                     height: 100%;
                     object-fit: cover;
+                    filter: brightness(75%);
                 }
 
                 .texts {
@@ -146,6 +146,7 @@
                         width: 100%;
                         height: 100%;
                         object-fit: cover;
+                        filter: brightness(80%);
                     }
                 }
 
@@ -498,6 +499,129 @@
                     border-radius: 50%;
                     background-color: #77F9DA4D;
                 }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 500px) {
+    #newsDetail {
+        padding-top: 85px;
+        .newsFirstPoster {
+            .text {
+                align-items: flex-start;
+                padding-top: 50px;
+                padding-left: 30px;
+            }           
+            img {
+                width: 60%;
+                height: 180px;
+                top: 50px; 
+            }
+        }
+
+        .newsInner {
+            flex-direction: column;
+            padding: 20px;
+
+            .left-side {
+                width: 100%;
+
+                .img-container {
+                    height: 350px;
+                    
+                    .texts {
+                        padding: 20px;
+
+                        h1 {
+                            font-size: 22px;
+                        }                        
+                    }
+                }
+
+            }
+            .right-side {
+                width: 100%;
+
+                .row {
+                    .row-left {
+                        .row-new-title {
+                            display: -webkit-box;
+                            -webkit-line-clamp: 4;
+                            -webkit-box-orient: vertical;
+                            overflow: hidden;
+                            text-overflow: ellipsis;
+                        }
+                    }
+                }
+            }
+        }
+
+        .legislative-documents {
+            padding: 20px;
+
+            .news-cards {
+                justify-content: center;
+            }
+        }
+
+        .poster {
+            flex-direction: column;
+            height: 500px;
+            padding: 30px 20px;
+
+            .left-side {
+                width: 100%;
+                margin: 0;
+
+                .bigText {
+                    p {
+                        width: 100%;
+                        font-size: 22px;
+                        text-align: center;
+                    }
+                    .name {
+                        display: none;
+                    }
+                }
+
+                .smallText {
+                    margin-top: 10px;
+                    width: 100%;
+                    text-align: center;
+                }
+            }
+
+            .right-side {
+                width: 100%;
+                padding: 0;
+                margin-bottom: -60px;
+
+                img {
+                    width: 190px;
+                    left: 50%;
+                    transform:  translateX( -50% );
+                }
+            
+                .shape {
+                    left: 50%;
+                    transform: translate(-50%, -50%);
+                    width: 200px;
+                    height: 200px;
+
+                    &::after {
+                        width: 170px;
+                        height: 170px;
+                    }
+                }
+            }
+        }
+
+        .normative-documents {
+            padding: 20px;
+
+            .news-cards {
+                justify-content: center;
             }
         }
     }
