--- a/src/components/weather/weather.scss
+++ b/src/components/weather/weather.scss
@@ -1,10 +1,13 @@
+.location-error {
+  padding: 20px;
+}
+
 .weather-widget {
     background-color: #fff;
     border-radius: 15px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     padding: 20px;
-    max-width: 60%;
-    margin: auto;
+    max-width: 55%;
     font-family: Arial, sans-serif;
     color: #333;
     text-align: center;
@@ -139,3 +142,4 @@
     }
   }
 }
+
