--- a/src/pages/newsCategory/newsCategory.scss
+++ b/src/pages/newsCategory/newsCategory.scss
@@ -166,8 +166,20 @@
         }
     }
 
-    .weather-data {
-        padding: 10px 0;
+    .currency-title {
+        font-weight: 600;
+        padding: 5px 50px;
+    }
+
+    .currency-little-title {
+        padding: 0 50px;
+    }
+
+    .g-container {
+        margin-top: 15px;
+        display: flex;
+        gap: 20px;
+        justify-content: center;
     }
 }
 
@@ -296,6 +308,18 @@
                     }
                 }
             }
+        }
+
+        .currency-title {
+            padding-left: 20px;
+        }
+        
+        .currency-little-title {
+            padding-left: 20px;
+        }
+
+        .g-container {
+            flex-direction: column;
         }
     }
 }
